@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2004, 2017 IBM Corp. and others
+ * Copyright (c) 2004, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -106,7 +106,7 @@ public class NewElfDump extends CoreReaderSupport {
     		return new Address32((int) result);
     	}
     	Number asNumber() {
-    		return new Integer((int) getValue());
+    		return Integer.valueOf((int) getValue());
     	}
     	long asAddress() {
     		return getValue();
@@ -156,7 +156,7 @@ public class NewElfDump extends CoreReaderSupport {
     		return new Address64(getValue() + offset);
     	}
     	Number asNumber() {
-    		return new Long(getValue());
+    		return Long.valueOf(getValue());
     	}
     	long asAddress() {
     		return getValue();
