@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corp. and others
+ * Copyright (c) 2000, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -266,7 +266,7 @@ final public class MessageFile {
 
 		Message message = new Message(type, msg, id, level, componentName, symbol, context);
 
-		messages.put(new Integer(id), message);
+		messages.put(Integer.valueOf(id), message);
 	}
 
 	/**
@@ -283,7 +283,7 @@ final public class MessageFile {
 			return null;
 		}
 
-		return (Message) messages.get(new Integer(id));
+		return (Message) messages.get(Integer.valueOf(id));
 	}
 
 	/**
